Изменён способ преобразования в Base64